<!--
  ~ Copyright 2016. SHENQINCI(沈钦赐)<dev@blxt.me>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">MdReader</string>
    <!--webViewActivity相关菜单-->
    <string name="action_refresh">刷新</string>
    <string name="action_copy_url">复制链接</string>
    <string name="action_open_url">打开链接</string>
    <string name="action_clear_cache">清理缓存和历史</string>
    <string name="action_clear_md_cache">清理缓存</string>
    <string name="action_clear_cookie">清理cookie</string>
    <string name="action_share">分享</string>

    <string name="menu_web_horizontal">横屏显示</string>
    <string name="menu_web_vertical">竖屏显示</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Description">Description</string>
    <string name="MainFileManagerNoPost">没有文章</string>
    <string name="MainFileManagerCreateHint">您可以点击右下角按钮创建新的文章</string>
    <string name="action_create_file">创建文章</string>
    <string name="create_folder">新建文件夹</string>
    <string name="file">文章</string>
    <string name="sure">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_search">搜索文章</string>
    <string name="please_enter">请输入</string>
    <string name="xxxx" translatable="false">xxxx</string>

    <string name="action_only_read" translatable="false">只读</string>

    <string name="action_paste">粘贴</string>
    <string name="action_copy">复制</string>
    <string name="action_cut">剪切</string>
    <string name="action_delete">删除</string>
    <string name="action_rename">重命名</string>

    <string name="action_redo">重做</string>
    <string name="action_undo">撤销</string>
    <string name="action_save">保存</string>
    <string name="action_other_operate">其他操作</string>
    <string name="action_helper">语法参考</string>
    <string name="action_preview">预览</string>
    <string name="action_edit">编辑</string>
    <string name="action_setting">设置</string>
    <string name="about">关于</string>

    <string name="copy_right" translatable="false">Copyrights © 2019</string>
    <string name="version_string" translatable="false">Version %s</string>
    <string name="contact_me">联系我们</string>
    <string name="connect_with_us">与我们联系</string>
    <string name="advertise_with_us">广告联系</string>

    <string name="share_copy_text">复制为文本</string>
    <string name="share_text">分享为文本</string>
    <string name="share_md">分享为MD文件(.md)</string>
    <string name="share_html">分享为HTML文本(.html)</string>
    <string name="share_png">分享为图片(.png)</string>
    <string name="title_activity_settings">设置</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    // ID
    <string name="sw_is_full_screen" translatable="false">使用全面屏</string>
    <string name="sw_is_only_md" translatable="false">只显示md文件</string>
    <string name="sw_is_show_more_mkdir" translatable="false">显示更多文件夹</string>
    <string name="sw_is_hide_system_mkdir" translatable="false">隐藏系统文件夹</string>
    <string name="sw_is_show_hide_mkdir" translatable="false">显示隐藏文件夹</string>
    <string name="sw_is_use_ttf" translatable="false">使用字体拓展</string>
    <string name="sw_is_auto_md_size" translatable="false">自适应图片大小</string>
    <string name="sw_is_multithreading" translatable="false">使用多线程</string>
    <string name="sw_is_full_face" translatable="false">使用表情</string>

</resources>
